--- a/EFCoreWithRazorPages/Pages/Students/Create.cshtml
+++ b/EFCoreWithRazorPages/Pages/Students/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EFCoreWithRazorPages.Pages.Students.CreateModel
+@model praticando_efcore_with_razor_pages.Pages.Students.CreateModel
 
 @{
     ViewData["Title"] = "Create";
