--- a/EFCoreWithRazorPages/Pages/Students/Delete.cshtml
+++ b/EFCoreWithRazorPages/Pages/Students/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EFCoreWithRazorPages.Pages.Students.DeleteModel
+@model praticando_efcore_with_razor_pages.Pages.Students.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
