--- a/EFCoreWithRazorPages/Pages/Students/Details.cshtml
+++ b/EFCoreWithRazorPages/Pages/Students/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EFCoreWithRazorPages.Pages.Students.DetailsModel
+@model praticando_efcore_with_razor_pages.Pages.Students.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
