--- a/EFCoreWithRazorPages/Pages/Students/Edit.cshtml
+++ b/EFCoreWithRazorPages/Pages/Students/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EFCoreWithRazorPages.Pages.Students.EditModel
+@model praticando_efcore_with_razor_pages.Pages.Students.EditModel
 
 @{
     ViewData["Title"] = "Edit";
