--- a/EFCoreWithRazorPages/Pages/Students/Index.cshtml
+++ b/EFCoreWithRazorPages/Pages/Students/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EFCoreWithRazorPages.Pages.Students.IndexModel
+@model praticando_efcore_with_razor_pages.Pages.Students.IndexModel
 
 @{
     ViewData["Title"] = "Index";
