--- a/EFCoreWithRazorPages/Pages/_ViewImports.cshtml
+++ b/EFCoreWithRazorPages/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using EFCoreWithRazorPages
-@namespace EFCoreWithRazorPages.Pages
+@using praticando_efcore_with_razor_pages
+@namespace praticando_efcore_with_razor_pages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
